--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,8 +18,8 @@
 <body>
 <div class="container">
     <div class="jumbotron">
-        <img src="../static/images/FBcover1200x628.png" width="1000"
-             th:src="@{images/FBcover1200x628.png}"/>
+        <img src="../static/images/java-spring-tutorials.png" width="1000"
+             th:src="@{images/java-spring-tutorials.png}"/>
         <h1>Hello</h1>
 
         <h2>Fellow Spring Framework Gurus!!!</h2>
