--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,30 +1,15 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head lang="en">
 
     <title>Spring Framework Guru</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
-    <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.4/css/bootstrap.min.css"
-          th:href="@{/webjars/bootstrap/3.3.6/css/bootstrap.min.css}"
-          rel="stylesheet" media="screen" />
-
-    <script src="http://cdn.jsdelivr.net/webjars/jquery/2.2.4/jquery.min.js"
-            th:src="@{/webjars/jquery/2.2.4/jquery.min.js}"></script>
-
-    <link href="../static/css/index.css"
-          th:href="@{css/index.css}" rel="stylesheet" media="screen"/>
+    <!--/*/ <th:block th:include="fragments/headerinc :: head"></th:block> /*/-->
 </head>
 <body>
+
 <div class="container">
-    <div class="jumbotron">
-        <img src="../static/images/java-spring-tutorials.png" width="1000"
-             th:src="@{images/java-spring-tutorials.png}"/>
-        <h1>Hello</h1>
-
-        <h2>Fellow Spring Framework Gurus!!!</h2>
-    </div>
+    <!--/*/ <th:block th:include="fragments/header :: header"></th:block> /*/-->
 </div>
-
 </body>
 </html>
