--- a/src/main/resources/templates/fragments/showtime.html
+++ b/src/main/resources/templates/fragments/showtime.html
@@ -4,14 +4,17 @@
 
 </head>
 <body>
-<div class="row">
-    <button type="button"  class="btn btn-default">Refresh time</button>
-</div>
-<div class="form-group">
-    <label class="col-sm-2 control-label">Time is: </label>
 
-    <div class="col-sm-10">
-        <p class="form-control-static" th:text="${time.timeString}">Time is: </p></div>
+<div class="container">
+    <div th:fragment="header">
+        <div>Hello world!</div>
+        <form id="triggerform" method="post" action="/getTime">
+            <button type="submit" class="btn btn-default">Refresh time</button>
+        </form>
+        <p class="form-control-static" th:text="${time != null} ? ${time.getTime} : 'Null time!'">
+            Time is:
+        </p>
+    </div>
 </div>
 </body>
 </html>
